--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.cdnfonts.com/css/gelion');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+                
 
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
